Feature EML-506: Openai working version